# voidin

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: ferris3d_v1.0.mtl
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  prelude.rs
crates/app/src/app/: gbuffer.rs  global_ubo.rs  pipeline.rs  screenshot.rs  state.rs  view_target.rs
crates/app/src/models/: cube.rs  mod.rs  plane.rs  sphere.rs
crates/app/src/models/gltf_model/: conversions.rs  mod.rs
crates/app/src/pass/: compute_update.rs  mod.rs  postprocess.rs  shading.rs  taa.rs  visibility.rs
crates/app/src/pool/: instance.rs  light.rs  ltc_matrix.raw  material.rs  mesh.rs  mod.rs  texture.rs
crates/bvh/: Cargo.toml
crates/bvh/src/: blas.rs  intersection.rs  lib.rs  tlas.rs
crates/components/: Cargo.toml
crates/components/src/: bind_group_layout.rs  blit.wgsl  blitter.rs  buffer.rs  camera.rs  fps_counter.rs  import_resolver.rs  input.rs  lib.rs  recorder.rs  shared.rs  watcher.rs  world.rs
crates/dyn_import/: Cargo.toml
crates/dyn_import/src/: lib.rs
crates/pass/: Cargo.toml
crates/pass/src/: compute_update.rs  lib.rs  postprocess.rs  shading.rs  taa.rs  visibility.rs
crates/pools/: Cargo.toml
crates/pools/src/: instance.rs  material.rs  texture.rs
crates/pools/src/mesh/: boxx.rs  cube.rs  mod.rs  plane.rs  sphere.rs
examples/: bvh_cpu.rs  model.rs  trig.rs
shaders/: ambient.wgsl  blit.wgsl  compute_update.wgsl  draw_indirect.wgsl  draw_mesh.wgsl  emit_draws.wgsl  encoding.wgsl  geometry.wgsl  lights.wgsl  ltc_utils.wgsl  model.wgsl  postprocess.wgsl  reproject.wgsl  shading.wgsl  shared.wgsl  taa.wgsl  trig.wgsl  utils.wgsl  visibility.wgsl
shaders/utils/: bvh.wgsl  color.wgsl  encoding.wgsl  hash.wgsl  intersections.wgsl  ltc.wgsl  math.wgsl  stack.wgsl  uv.wgsl
src/: app.rs  camera.rs  input.rs  lib.rs  main.rs  model.rs  pipeline.rs  recorder.rs  resources.rs  shader_compiler.rs  state.rs  utils.rs  view_target.rs  watcher.rs
src/app/: bind_group_layout.rs  blitter.rs  gbuffer.rs  global_ubo.rs  instance.rs  light.rs  material.rs  mesh.rs  pipeline.rs  postprocess_pass.rs  screenshot.rs  state.rs  texture.rs  view_target.rs
src/gltf/: conversions.rs  mod.rs
src/models/: cube.rs  mod.rs  plane.rs  sphere.rs
src/models/gltf_model/: conversions.rs  mod.rs
src/pass/: ambient.rs  compute_update.rs  geometry.rs  light.rs  mod.rs  postprocess.rs  shading.rs  taa.rs  visibility.rs
src/utils/: buffer.rs  import_resolver.rs  mod.rs  resource.rs  world.rs
