[package]
name = "voidin"
version = "0.69.0"
edition = "2021"

default-run = "model"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.dependencies]
glam = { version = "0.23.0", features = ["rand", "bytemuck"] }
bytemuck = { version = "^1.13", features = ["derive"] }
color-eyre = "^0.6"
log = "^0.4"
env_logger = "0.10.0"
ahash = "^0.8"
wgpu = { version = "^0.16", features = ["spirv", "naga"] }
rand = { version = "^0.8", features = ["small_rng"] }
winit = "^0.28"
png = "^0.17"
dolly = "0.4.2"
either = "1.8.1"
tobj = "4.0.0"
half = { version = "2.2.1", features = ["bytemuck"] }

[dependencies]
bvh = { path = "crates/bvh" }
app = { path = "crates/app" }
dyn_import = { path = "crates/dyn_import" }
wgpu = { workspace = true }
winit = { workspace = true }
color-eyre = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
half = { workspace = true }
tobj = { workspace = true }

[profile.dev.package."*"]
opt-level = 1

[profile.dev.package.app]
opt-level = 0
[profile.dev.package.dyn_import]
opt-level = 0

[profile.hyper]
inherits = "release"
panic = "abort"      # Strip expensive panic clean-up logic
codegen-units = 1    # Compile crates one after another so the compiler can optimize better
lto = true           # Enables link to optimizations
strip = true         # Remove debug symbols

[profile.profiling]
inherits = "release"
debug = true
strip = false
panic = "unwind"
