[package]
name = "components"
version = "0.69.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
color-eyre = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
ahash = { workspace = true }
png = { workspace = true }
dolly = { workspace = true }
either = { workspace = true }
pretty-type-name = "1.0.1"
notify = "6.0.0"
notify-debouncer-mini = "0.3.0"
clean-path = "0.2.1"
crossbeam-channel = "^0.5"
chrono = "^0.4"
