[package]
name = "pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
color-eyre = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
app = { path = "../app" }
components = { path = "../components" }
