[package]
name = "pools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
components = { path = "../components" }
